# picotype

./: .gitmodules  LICENSE  README.md
.github/workflows/: build-release.yml
case/: picotype_case_glue.stl
device/: CMakeLists.txt  firmware.c
device/bluetooth/: bluetooth.c  bluetooth.h  connection.c  connection.h  picotype.gatt
device/bluetooth/packet/: packet.c  packet.h
device/bluetooth/service/typing/: service.c  service.h
device/bluetooth/service/typing/packet/: base.c  base.h
device/config/: bluetooth.h  btstack_config.h  hardware.h
device/hardware/: hardware.c  hardware.h
device/usb/: tusb_config.h  usb.c  usb.h  usb_descriptors.c
logo/: quality_logo.kra
pwa/: .gitignore  Dockerfile  README.md  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
pwa/src/: app.d.ts  app.html  service-worker.ts
pwa/src/components/: ConnectDevice.svelte  ConnectionState.svelte  DeviceList.svelte  LoadingOverlay.svelte  TextInput.svelte  Title.svelte  Toast.svelte
pwa/src/lib/: ble.ts  log.ts  settings.test.ts  settings.ts  store.ts
pwa/src/lib/packet/: base.ts
pwa/src/lib/packet/client/: type_content.test.ts  type_content.ts
pwa/src/routes/: +layout.svelte  +page.svelte
pwa/src/routes/docs/: +page.svelte
pwa/src/routes/settings/: +page.svelte
pwa/src/routes/settings/debug/: +page.svelte
pwa/static/: docs.html  manifest.json
pwa/static/favicons/: site.webmanifest
